fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
   
   /*header css */
   .header {
-    background-image: linear-gradient(rgba(198,207,220, 0.20), rgba(198,207,220, 0.20)), url("images/green_dress.jpeg");
+    background-image: linear-gradient(rgba(35, 36, 37, 0.2), rgba(35, 36, 37, 0.20)), url("images/green_dress.jpeg");
     background-size: cover;
     width: 100%;
     height: 1100px;
@@ -96,10 +96,11 @@
   display: flex;
   justify-content: center; 
   margin:0 auto;
-  height: 500px;
+  
 }
 .sizzle {
     margin-top: 100px;
+    margin-bottom: 30px;
     border-radius: 10px; 
     overflow: hidden;
     width: 853px;
@@ -148,7 +149,7 @@
   }
 
   .quote-container {
-    height:900px;
+    height:700px;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -181,11 +182,11 @@
 
 
   .reel-container {
-    height: 500px;
+    
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    margin: 0 auto;
+    margin: 100px auto;
     padding: 30 0;
     
 }
